--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-#node
+# dependencies
 node_modules/
 
-#node package manager
-package-lock.json
-yarn.lock
+# package_manager
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock*
+package-lock.json*
+
+# production
+/build
+/dist
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# editor
+.vscode
